fixed some bugs, including broken layout on firefox

--- a/index.css
+++ b/index.css
@@ -86,10 +86,12 @@ paper-toggle-button {
 #facts-holder {
     flex: 2;
     margin-right: 8px;
+    padding-bottom: 28px;
 }
 #stats-holder {
     flex: 5;
     margin-left: 8px;
+    padding-bottom: 28px;
 }
 #chart-holder {
     margin-top: 16px;
@@ -144,4 +146,10 @@ tr {
 .p-card-title {
     height: 18px;
     margin: 8px 0 0;
+}
+/*This will work for firefox*/
+@-moz-document url-prefix() {
+    .toggle-label {
+        margin-top: -16px;
+    }
 }
